app/backend/k8s/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: devops-platform
  labels:
    name: devops-platform
