app/backend/k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops-platform
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
